@@ -7,6 +7,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd modify to return actual error (ITS#6581)
 	Fixed slapd-bdb entry cache delete failure (ITS#6577)
 	Fixed slapd-null back-config support (ITS#6624)
+	Fixed slapo-pcache callback freeing (ITS#6640)
 	Fixed slapo-ppolicy don't update opattrs on consumers (ITS#6608)
 	Fixed slapo-syncprov to send error if consumer is newer (ITS#6606)
 
